always show scroll on landing to avoid cards jump during search

--- a/td-documentation-reactjs/src/screens/landing/Landing.css
+++ b/td-documentation-reactjs/src/screens/landing/Landing.css
@@ -6,7 +6,7 @@
     flex: 1;
 
     max-height: 100vh;
-    overflow-y: auto;
+    overflow-y: scroll;
 
     padding: 20px;
     --mdoc-landing-border-color: #ddd;
